--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -56,8 +56,9 @@
 
 .search-module.presentation-mode {
   background: transparent;
-  padding: 20px 0 0;
+  padding: 0;
   box-shadow: none;
+  max-width: none;
 }
 
 .search-form {
